--- a/OLCSS.ipynb
+++ b/OLCSS.ipynb
@@ -94,7 +94,7 @@
    "source": [
     "## Benchmark\n",
     "\n",
-    "OL-CCS performance is evaluated for randomly generated CS problem instances and Magnetic Resonance Imaging (MRI) of a brain. The performance accuracy is evaluated by calculating the Root-Mean-Squared-Error (RMSE) as $$ \\sqrt{\\dfrac{1}{N} \\sum_{r=1}^N \\left(R_r\\sigma_r - x_r\\xi_r\\right)^2}, $$\n",
+    "OL-CCS performance is evaluated for randomly generated CS problem instances. The performance accuracy is evaluated by calculating the Root-Mean-Squared-Error (RMSE) as $$ \\sqrt{\\dfrac{1}{N} \\sum_{r=1}^N \\left(R_r\\sigma_r - x_r\\xi_r\\right)^2}, $$\n",
     "\n",
     "where $R_r$ and $\\sigma_r$ is the estimated signal and support from OL-CCS and $x_r$ and $\\xi_r$ is the correct signal and support for the CS problem instance. "
    ]
@@ -441,6 +441,32 @@
     "plt.xlabel(\"sparseness\")\n",
     "plt.ylabel(\"RMSE\")\n",
     "plt.legend(['Theoretical', 'OL-CCS'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04d8b340-b721-48ea-8211-05bff68cd3ca",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## OL-CCS\n",
+    "# Open-Loop Coherent Compressed Sensor\n",
+    "# Author: M. D. Sudeera H. Gunathilaka\n",
+    "\n",
+    "##BSD 3-Clause License\n",
+    "\n",
+    "#Copyright (c) 2023, NTT Research Inc., PHI labs, algorithms\n",
+    "\n",
+    "#Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:\n",
+    "\n",
+    "#1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.\n",
+    "\n",
+    "#2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.\n",
+    "\n",
+    "#3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission.\n",
+    "\n",
+    "#THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS \"AS IS\" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE."
    ]
   }
  ],
